# integral_image

./: CMakeLists.txt  define.h  main.cu  parallel.cu  scan.cu  sequential.cpp  transpose.cu
